<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="my_nanondegree_apps_header">My Nanodegree Apps!</string>
    <string name="spotify_streamer_button_label">SPOTIFY STREAMER</string>
    <string name="scores_app_button_label">SCORES APP</string>
    <string name="library_app_button_label">LIBRARY APP</string>
    <string name="build_it_bigger_button_label">BUILD IT BIGGER</string>
    <string name="xyz_reader_button_label">XYZ READER</string>
    <string name="capstone_button_label">CAPSTONE: MY OWN APP</string>
</resources>
