<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_centerHorizontal="true"
            android:text="@string/my_nanondegree_apps_header"
            android:id="@+id/textView"
            android:layout_alignParentTop="true" />

    <com.example.udacity.appportfolio.ToasterButton
            style="@style/AppButton"
            android:id="@+id/button1"
            android:layout_below="@id/textView"
            android:text="@string/spotify_streamer_button_label" />

    <com.example.udacity.appportfolio.ToasterButton
            style="@style/AppButton"
            android:text="@string/scores_app_button_label"
            android:id="@+id/button2"
            android:layout_below="@id/button1" />

    <com.example.udacity.appportfolio.ToasterButton
            style="@style/AppButton"
            android:text="@string/library_app_button_label"
            android:id="@+id/button3"
            android:layout_below="@id/button2" />

    <com.example.udacity.appportfolio.ToasterButton
            style="@style/AppButton"
            android:text="@string/build_it_bigger_button_label"
            android:id="@+id/button4"
            android:layout_below="@id/button3" />

    <com.example.udacity.appportfolio.ToasterButton
            style="@style/AppButton"
            android:text="@string/xyz_reader_button_label"
            android:id="@+id/button5"
            android:layout_below="@id/button4" />

    <com.example.udacity.appportfolio.ToasterButton
            style="@style/AppButton"
            android:text="@string/capstone_button_label"
            android:id="@+id/button6"
            android:layout_below="@id/button5" />


</RelativeLayout>
